Fix font selector layout on mobile

--- a/themes/cv-theme/static/css/style.css
+++ b/themes/cv-theme/static/css/style.css
@@ -423,4 +423,11 @@ main {
   .home-links {
     justify-content: center;
   }
+
+  .home-font-selectors {
+    position: static;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1em;
+  }
 }
